# scotty

./: .gitignore  LICENSE  README.md  __main__.py  pyproject.toml
commands/: init_cmd.py  ssh.py
execution/: ssh_command.py  task_runner.py
parsing/: bash_parser.py  models.py  parse_result.py
src/scotty/: cli.py
src/scotty/commands/: doctor.py  init_cmd.py  run.py  ssh.py  tasks.py
src/scotty/execution/: executor.py  ssh_command.py  task_result.py  task_runner.py
src/scotty/parsing/: bash_parser.py  blade_parser.py  parse_result.py
src/scotty/ui/: output.py  prompts.py  spinner.py
ssh/: config.py
tests/: conftest.py
tests/feature/: test_init_command.py  test_run_command.py  test_tasks_command.py
tests/unit/: test_bash_parser.py  test_output.py  test_parse_result.py  test_ssh_command_builder.py  test_ssh_config_file.py  test_task_definition.py  test_task_result.py
ui/: banner.py
