[project]
name = "scotty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "overflowy", email = "overflowy@riseup.net" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
scotty = "scotty.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
