[project]
name = "scotty"
version = "0.1.0"
description = "A beautiful SSH task runner (Python port of spatie/scotty)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "overflowy", email = "overflowy@riseup.net" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
scotty = "scotty.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
